# chatgpt_ros

./: README.md  package.xml  setup.py
.github/workflows/: foxy.yaml  humble.yaml
chatgpt_ros/: chatgpt.py  chatgpt_ros.py  package.xml  setup.cfg  setup.py
chatgpt_ros/chatgpt_ros/: chatgpt.py  chatgpt_ros.py  chatgpt_ros_service_client.py  chatgpt_ros_service_server.py
chatgpt_ros/param/: param.yaml
chatgpt_ros/test/: test_chatgpt.py  test_pep257.py
chatgpt_ros_interfaces/: CMakeLists.txt  package.xml
chatgpt_ros_interfaces/srv/: ChatGptService.srv
